2023-10-23T16:12:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6615987642 # 1277
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
* notice: last 14d: unq all: 6 39
* notice: prev accum: outdated-unq outdated-all / unq all: 670 1055 / 697 1096
* notice: next accum: outdated-unq outdated-all / unq all: 672 1058 / 697 1097
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-10-09] / [2023-10-23]

2023-10-23T08:12:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6610494408 # 1276
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
* notice: last 14d: unq all: 6 39
* notice: prev accum: outdated-unq outdated-all / unq all: 670 1055 / 695 1094
* notice: next accum: outdated-unq outdated-all / unq all: 670 1055 / 697 1096
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -2 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-10-09 2023-10-23]

2023-10-22T16:11:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6604862918 # 1274
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-22
* notice: last 14d: unq all: 6 39
* notice: prev accum: outdated-unq outdated-all / unq all: 669 1054 / 695 1093
* notice: next accum: outdated-unq outdated-all / unq all: 670 1055 / 695 1094
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-10-08] / [2023-10-22]

2023-10-22T08:10:34Z: