@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-10-23T16:12:04Z",
+  "timestamp" : "2023-10-24T08:12:30Z",
   "count_outdated" : 1058,
   "uniques_outdated" : 672,
-  "count" : 1097,
-  "uniques" : 697,
+  "count" : 1099,
+  "uniques" : 699,
   "clones" : [
     {
       "timestamp": "2023-10-10T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 4, 7 ],
-      "count_decinc": [ 0, 7 ],
-      "uniques": 4,
-      "uniques_minmax": [ 3, 4 ],
-      "uniques_decinc": [ 0, 4 ]
+      "count": 3,
+      "count_minmax": [ 3, 7 ],
+      "count_decinc": [ 4, 7 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 4 ],
+      "uniques_decinc": [ 2, 4 ]
     },
     {
       "timestamp": "2023-10-11T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 3,
       "count_minmax": [ 2, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-24T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
