@@ -1,11 +1,11 @@
 {
-  "count": 39,
-  "uniques": 6,
+  "count": 37,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2023-10-10T00:00:00Z",
-      "count": 7,
-      "uniques": 4
+      "count": 3,
+      "uniques": 2
     },
     {
       "timestamp": "2023-10-11T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-10-23T00:00:00Z",
       "count": 3,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-24T00:00:00Z",
+      "count": 2,
       "uniques": 2
     }
   ]
