@@ -1,3 +1,12 @@
+2023-10-24T08:12:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6624113239 # 1279
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
+* notice: last 14d: unq all: 5 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 672 1058 / 697 1097
+* notice: next accum: outdated-unq outdated-all / unq all: 672 1058 / 699 1099
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -2 -4 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-10-10 2023-10-24]
+
 2023-10-23T16:12:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6615987642 # 1277
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
